--- a/Challenge_Prairie/Style.css
+++ b/Challenge_Prairie/Style.css
@@ -25,8 +25,8 @@ font-family: 'Merriweather', serif;
     'centre centre centre centre droite droite'
     'pied1 pied1 pied2 pied2 droite droite';
   grid-gap: 10px;
-  background-color: #2196F3;
-  padding: 10px;
+  background-color: white;
+  padding: 0.5px;
 }
 
 .grid-container > div {
@@ -35,14 +35,11 @@ font-family: 'Merriweather', serif;
   padding: 3% 0;
   font-size: 30px;
 }
-.temps {
-    font-size: 20pt;
-    text-align: left;
-    padding-bottom: 20px;
-    color: grey;
-}
+
 
 li{
 	display: inline-table;
 
 }
+
+
